styles.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Segoe UI', sans-serif;
    scroll-behavior: smooth;
}

header {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100px;
    padding: 0 5%;
    position: fixed;
    top: 0;
    width: 100%;
    z-index: 1000;
}

header nav {
    display: flex;
    gap: 30px;
}

header nav a {
    text-decoration: none;
    font-size: 20px;
    font-weight: 600;
    transition: 0.3s;
    color: white;
}

header nav a.active,
header nav a:hover {
    text-shadow: 0 0 5px rgba(0, 247, 255, 1);
}

header nav:hover > a:not(:hover):not(.active) {
    text-shadow: none;
}

.home {
    display: flex;
    justify-content: space-between;
    height: 100vh;
    background: linear-gradient(to top, #fff 10%, #308cb8);
    position: relative;
    overflow: hidden;
    animation: slideDown 0.5s ease forwards;
}

.overlay {
    background-color: rgba(0, 0, 0, 0.5);
    position: fixed;
    width: 100%;
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    z-index: 1000;
}

.popup {
    background-color: white;
    padding: 20px;
    border-radius: 10px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
    text-align: center;
    animation: slideDown 1s ease forwards;
}

@keyframes slideDown {
    from {
        transform: translateY(-50px);
        opacity: 0; 
    }
    to {
        transform: translateY(0);
        opacity: 1;
    }
}

#acceptButton {
    padding: 10px 20px;
    background-color: #007bff;
    color: white;
    border: none;
    border-radius: 5px;
    cursor: pointer;
    margin-top: 20px;
}

.home img {
    pointer-events: none;
}

.leaf1, .leaf2 {
    z-index: 3; 
    position: absolute;
    bottom: 0;
    width: 25%;
}

.bush1, .bush2 {z-index: 2; top: 0;}

.leaf1 {
    left: 0;
}

.leaf2 {
    right: 0;
}

.home .title {
    position: absolute;
    top: 27%;
    left: 50%;
    transform: translate(-50%, -50%);
    z-index: 0;

}

.home .ground {
    position: absolute;
    bottom: 0;
    z-index: -1;
}

.home .road {
    position: absolute;
    bottom: 0;
    z-index: 1;
}

.home .upload {
    position: absolute;
    z-index: 2;
    bottom: 2%;
    left: 25%;
}

.home .stream {
    position: absolute;
    z-index: 2;
    bottom: 30%;
    right: 35%;
    width: 170px;
}

.upload, .stream {
    cursor: pointer;
    transition: transform 0.2s ease, filter 0.2s ease;
}

.how-to-use {
    padding: 10vh 0;
    background: linear-gradient(to top, #221d32, #4c4a4b);;
    color: white;
    position: relative;
}

.how-to-use h1 {
    text-align: center;
    font-family: "Stick No Bills", sans-serif;
    font-weight: bold;
    font-style: normal;
    font-size: 40px;
}

.htu-container {
    padding: 4vh 15vw;
    display: flex;
    justify-content: center;
    gap: 5vw;
}

.how-to-use img {
    width: 250px    ;
}

.how-to-use .room-one,
.how-to-use .room-two,
.how-to-use .room-three {
    display: flex;
    flex-direction: column;
    -webkit-box-align: center;
    align-items: center;
    max-width: 275px;
}

.how-to-use .speech-bubble {
    margin: 2rem 0 1rem 0;
    border-radius: 20px;
    padding: 5px 15px;
    font-family: "Stick No Bills", sans-serif;
    font-weight: bold;
    font-size: 20px;
}

.how-to-use .stream {
    border: 5px solid rgb(159, 202, 89);
}

.how-to-use .process {
    border: 5px solid rgb(244, 111, 81);
}

.how-to-use .observe {
    border: 5px solid rgb(30, 156, 237);
}

.how-to-use .description {
    text-align: center;
    width: 90%;
}

.s1d623h8f1 {
    text-align: center;
    transform: rotate(-1.5deg);
    margin: -30px 0;
    height: 55px;
    background-color: rgb(250, 250, 250);
    display: flex;
    -webkit-box-pack: center;
    justify-content: center;
    -webkit-box-align: center;
    align-items: center;
}

.s1d623h8f1 .black {
    margin-right: 100px;
    font-family: 'Times New Roman', Times, serif;
}

.s1d623h8f1 .white {
    display: inline-block;
    color: white;
    -webkit-text-stroke: 0.7px black;
    font-family: 'Times New Roman', Times, serif;
}

.how-it-works {
    padding: 10vh 0;
    background: linear-gradient(to top, #1a1122 40%, #111422);;
    color: white;
    z-index: -1;
}

.hiw-.wrapper {
    width: 100%;
    height: 50vh;
    display: flex;
    align-items: center;
    justify-content: center;
}

.hiw-container {
    height: 400px;
    display: flex;
    flex-wrap: nowrap;
    justify-content: start;
}

.card {
    width: 80px;
    border-radius: .75rem;
    background-size: cover;
    cursor: pointer;
    overflow: hidden;
    border-radius: 2rem;
    margin: 0 10px;
    display: flex;
    align-items: flex-end;
    transition: .6s cubic-bezier(.28,-0.03,0,.99);
    box-shadow: 0px 10px 30px -5px rgba(0,0,0,0.8);
}

.card > .row {
    color: white;
    display: flex;
    flex-wrap: nowrap;
}

.card > .row > .icon {
    background: #223;
    color: white;
    border-radius: 50%;
    width: 50px;
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 15px;
    font-family: 'Times New Roman', Times, serif;
}

.card > .row > .description {
    display: flex;
    justify-content: center;
    flex-direction: column;
    overflow: hidden;
    height: 80px;
    width: 520px;
    opacity: 0;
    transform: translateY(30px);
    transition-delay: .3s;
    transition: all .3s ease;
}

.description p {
    color: #fff;
    padding-top: 5px;
}

.description h4 {
    text-transform: uppercase;
}

input {
    display: none;
}

input:checked + label {
    width: 600px;
}

input:checked + label .description {
    opacity: 1 !important;
    transform: translateY(0) !important;
}

.card[for="c1"] {
    background-image: url('./assets/how-it-works/img1.jpeg');
}
.card[for="c2"] {
    background-image: url('./assets/how-it-works/img2.jpeg');
}
.card[for="c3"] {
    background-image: url('./assets/how-it-works/img3.jpeg');
}
.card[for="c4"] {
    background-image: url('./assets/how-it-works/img4.jpeg');
}

.spacer {
    aspect-ratio: 960/300;
    width: 100%;
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
    background-color: #B9929F;
}

.layer1 {
    background-image: url('./assets/layered-waves.svg');
}

.contact {
    padding: 10vh 0;
    background-color: #B9929F;
}

